@@ -1,0 +1,19 @@
+ftp://ftp.gnu.org/gnu/aspell/dict/bg/aspell5-bg-4.0-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/ca/aspell-ca-0.50-2.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/cy/aspell-cy-0.50-3.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/da/aspell5-da-1.4.42-1.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/de/aspell-de-0.50-2.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/el/aspell-el-0.50-3.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/en/aspell5-en-6.0-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/es/aspell-es-0.50-2.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/fr/aspell-fr-0.50-3.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/it/aspell-it-0.53-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/nb/aspell-nb-0.50.1-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/nl/aspell-nl-0.50-2.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/pl/aspell-pl-0.51-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/pt/aspell-pt-0.50-2.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/ro/aspell-ro-0.50-2.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/sk/aspell-sk-0.52-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/sl/aspell-sl-0.50-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/sv/aspell-sv-0.51-0.tar.bz2
+ftp://ftp.gnu.org/gnu/aspell/dict/uk/aspell-uk-0.51-0.tar.bz2
